@@ -265,4 +265,6 @@ New features:
 - New function grape.user_id_from_email
 - Correctly store headers
 - Fixed issues regarding paths when loading of config files
+- Fix bug relating to validation on GET 
+- Grape can n
 
